Add hero images to public directory
Fix .gitignore: /img/ only ignores root-level img dir,
not docs/public/img/ which VitePress needs for static assets.

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ docs/.vitepress/cache/
 .backup/
 
 # Source images (already copied to docs/public/img/)
-img/
+/img/
 
 # Project docs (not part of the site)
 PROJECT-COMPLETE-GUIDE.md
