--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agents-academic-blog",
   "version": "1.0.0",
-  "description": "Coding Agent for Academic Research",
+  "description": "Agent for Research",
   "scripts": {
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
