chore(vitepress): exclude AI agent docs from site build
- Add srcExclude pattern in docs/.vitepress/config.mts
  - Exclude **/AGENTS.md from VitePress build
  - Exclude **/CLAUDE.md from VitePress build
  - Prevents AI agent knowledge base from appearing on public website

- Update .gitignore
  - Add .claude/ directory exclusion
  - Ensure AI agent configuration files remain private

Impact: AGENTS.md and CLAUDE.md files remain in repository for AI agent
use but are no longer built into HTML and exposed on the website.

Build verification: npm run build passed, no AGENTS.html in dist/

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ docs/.vitepress/cache/
 
 # Spec workflow
 .spec-workflow/
+.serena/
 
 # Backup
 .backup/
@@ -20,7 +21,7 @@ docs/.vitepress/cache/
 
 # Project docs (not part of the site)
 PROJECT-COMPLETE-GUIDE.md
-CLAUDE.md
+CONTENT-PLAN.md
 
 # Environment variables
 .env
